tests/baselines/reference/genericReturnTypeFromGetter1.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
genericReturnTypeFromGetter1.ts(5,18): error TS2314: Generic type 'A<T>' requires 1 type argument(s).


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== genericReturnTypeFromGetter1.ts (1 errors) ====
    export interface A<T> {
       new (dbSet: DbSet<T>): T;
    }
    export class DbSet<T> {
        _entityType: A;
                     ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).
      get entityType() { return this._entityType; }  // used to ICE without return type annotation
    }
    